# Root package: exposes Cargo.lock and Cargo.toml for native crate_universe (dashql-native, dashql-pack);
# node_modules at root: npm link tree. App uses NODE_PATH = overlay/node_modules + node_modules (no full merge).
package(default_visibility = ["//visibility:public"])

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@npm//:defs.bzl", "npm_link_all_packages")

exports_files([
    "Cargo.lock",
    "Cargo.toml",
    "package.json",
    "pnpm-workspace.yaml",
    "tsconfig.json",
])

# Wrapper so other packages (e.g. //packages/dashql-core/api) can use root tsconfig in data.
js_library(
    name = "tsconfig_json",
    srcs = ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

# npm link tree from pnpm lockfile (package.bazel.json + pnpm-lock.yaml).
# Dashql-app uses this plus //packages/dashql-app:ankoh_overlay via NODE_PATH (two entries), no copy_to_directory merge.
npm_link_all_packages(name = "node_modules")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//packages/dashql-core:benchmark_pipeline": "",
        "//packages/dashql-core:benchmark_pipeline_ctes": "",
        "//packages/dashql-core:benchmark_catalog": "",
        "//packages/dashql-core:dashql_core": "",
        "//packages/dashql-core:test_utils": "",
        "//packages/dashql-core:test_main": "",
        "//packages/dashql-core:unit_tests": "",
        "//packages/dashql-core:parser_tests": "",
        "//packages/dashql-core:analyzer_tests": "",
        "//packages/dashql-core:completion_tests": "",
        "//packages/dashql-core:formatter_tests": "",
        "//packages/dashql-core:formatter_validation_duckdb_tests": "",
        "//packages/dashql-core:registry_tests": "",
        "//packages/dashql-core:plan_view_model_tests": "",
        "//packages/dashql-core:rope_fuzzer_128s": "",
        "//packages/dashql-core:rope_fuzzer_128s_bulk": "",
        "//packages/dashql-core:rope_fuzzer_128l": "",
        "//packages/dashql-core:rope_fuzzer_128l_bulk": "",
        "//packages/dashql-core:rope_fuzzer_1024s": "",
        "//packages/dashql-core:rope_fuzzer_1024s_bulk": "",
        "//packages/dashql-core:rope_fuzzer_1024l": "",
        "//packages/dashql-core:rope_fuzzer_1024l_bulk": "",
        "//packages/dashql-core:snapshotter": "",
    },
    exclude_external_sources = True,
    exclude_headers = "external",
)
