# Root workspace for native packages (dashql-native, dashql-pack).
# Used by Bazel crate_universe as the primary "crates" universe.
[workspace]
resolver = "2"
members = [
    "packages/dashql-native",
    "packages/tauri-aclgen",
    "packages/dashql-pack",
]

[profile.release]
strip = true
lto = true
opt-level = "s"
