module(name = "dashql", version = "0.1.0")

# Rules for C/C++ (cc_library, cc_test, etc.)
bazel_dep(name = "rules_cc", version = "0.2.14")

# Rules for Rust (dashql-compute: native tests + WASM)
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "gflags", version = "2.2.2.bcr.1")

# JS/TS/Jest (aspect rules) — used by packages/dashql-core/api
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "aspect_rules_js", version = "2.0.0")
bazel_dep(name = "aspect_rules_swc", version = "2.6.1")
bazel_dep(name = "aspect_rules_jest", version = "0.25.2")
bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")
bazel_dep(name = "aspect_rules_webpack", version = "0.17.1")
bazel_dep(name = "rules_nodejs", version = "6.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# Node.js toolchain (for app_bundle postprocess script).
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain()
use_repo(node, "nodejs_toolchains")
register_toolchains("@nodejs_toolchains//:all")

# Protobuf: proto_library (rules_proto) + custom plugins (rules_proto_grpc) for protoc + protoc-gen-es
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")

# copy_to_directory toolchain (assemble src + FlatBuffer TS into one tree for SWC)
bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.copy_to_directory()
use_repo(bazel_lib_toolchains, "copy_to_directory_toolchains")
register_toolchains("@copy_to_directory_toolchains//:all")

# npm deps from pnpm lockfile at repo root. Single source: root package.json + workspace packages; run "pnpm install" to update.
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
    ],
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

core_deps = use_extension("//bazel:core_dependencies.bzl", "dashql_core_dependencies")
core_version = use_extension("//packages/dashql-core:bazel/version.bzl", "dashql_core_version_ext")
use_repo(
    core_deps,
    "com_google_flatbuffers",
    "ankerl_unordered_dense",
    "rapidjson",
    "c4core",
    "rapidyaml",
    "bison_src",
    "m4_src",
    "flex_src",
    "com_google_benchmark",
    "duckdb",
    "binaryen",
    "wabt",
    "wasi_sdk",
)
use_repo(core_version, "dashql_core_version")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.93.1"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Compute version (git describe -> env for Rust build). Must be before crates so annotation can reference it.
compute_version = use_extension("//packages/dashql-compute:bazel/version.bzl", "dashql_compute_version_ext")
use_repo(compute_version, "dashql_compute_version")

# wasm-bindgen CLI (prebuilt from GitHub) for rust_wasm_dist (native Bazel WASM build).
wasm_bindgen_repo = use_extension("//bazel:external_wasm_bindgen.bzl", "wasm_bindgen_ext")
use_repo(wasm_bindgen_repo, "wasm_bindgen_cli")

# Crate universe: generate Rust deps from root workspace (dashql-compute only).
# Run CARGO_BAZEL_REPIN=1 bazel sync --only=crates after changing Cargo.toml or Cargo.lock.
compute_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
compute_crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
        "wasm32-unknown-unknown",
    ],
)
# getrandom 0.4.x needs wasm_js for wasm32-unknown-unknown (transitive via uuid, tempfile, etc.).
# wasm_js backend requires wasm-bindgen at build time.
compute_crate.annotation_select(
    crate = "getrandom",
    version = "0.4.1",
    triples = ["wasm32-unknown-unknown"],
    crate_features = ["wasm_js"],
    deps = ["@crates//:wasm-bindgen"],
)
use_repo(compute_crate, "crates")

# WASM build: use wasm32 platform so the WASI SDK toolchain is selected.
register_toolchains("@wasi_sdk//:wasi_cc_toolchain")
