module(
    name = "dashql",
    version = "0.1.0",
)

# Rules for C/C++ (cc_library, cc_test, etc.)
bazel_dep(name = "rules_cc", version = "0.2.17")

# Rules for Rust (dashql-compute: native tests + WASM)
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "gflags", version = "2.2.2.bcr.1")

# JS/TS/Jest (aspect rules) — used by packages/dashql-core/api
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "aspect_rules_swc", version = "2.6.1")
bazel_dep(name = "aspect_rules_jest", version = "0.25.2")
bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")
bazel_dep(name = "aspect_rules_webpack", version = "0.17.1")
bazel_dep(name = "rules_nodejs", version = "6.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# Node.js toolchain (for app_bundle postprocess script).
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain()
use_repo(node, "nodejs_toolchains")

register_toolchains("@nodejs_toolchains//:all")

# Protobuf: proto_library (rules_proto) + custom plugins (rules_proto_grpc) for protoc + protoc-gen-es
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")

# copy_to_directory toolchain (assemble src + FlatBuffer TS into one tree for SWC)
bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.copy_to_directory()
use_repo(bazel_lib_toolchains, "copy_to_directory_toolchains")

register_toolchains("@copy_to_directory_toolchains//:all")

# npm deps from pnpm lockfile at repo root. Single source: root package.json + workspace packages; run "pnpm install" to update.
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
    ],
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

core_deps = use_extension("//bazel:core_dependencies.bzl", "dashql_core_dependencies")

core_version = use_extension("//packages/dashql-core:bazel/version.bzl", "dashql_core_version_ext")

use_repo(
    core_deps,
    "ankerl_unordered_dense",
    "binaryen",
    "bison_src",
    "c4core",
    "com_google_benchmark",
    "com_google_flatbuffers",
    "duckdb",
    "flex_src",
    "m4_src",
    "rapidjson",
    "rapidyaml",
    "wabt",
    "wasi_sdk",
)

use_repo(core_version, "dashql_core_version")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.93.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Compute version (git describe -> version.rs for Rust build). Must be before crates so annotation can reference it.
compute_version = use_extension("//packages/dashql-compute:bazel/version.bzl", "dashql_compute_version_ext")
use_repo(compute_version, "dashql_compute_version")

# App version (git describe -> version.env for Vite genrules in dashql-app).
app_version = use_extension("//packages/dashql-app:bazel/version.bzl", "dashql_app_version_ext")
use_repo(app_version, "dashql_app_version")

# wasm-bindgen CLI (prebuilt from GitHub) for rust_wasm_dist (native Bazel WASM build).
wasm_bindgen_repo = use_extension("//bazel:external_wasm_bindgen.bzl", "wasm_bindgen_ext")
use_repo(wasm_bindgen_repo, "wasm_bindgen_cli")

# Compute crate universe (WASM + native, dashql-compute only).
# dashql-compute is a standalone workspace at packages/dashql-compute/.
# Run CARGO_BAZEL_REPIN=1 bazel build @compute_crates//:all after changing packages/dashql-compute/Cargo.toml.
compute_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate", isolate = True)
compute_crate.from_cargo(
    name = "compute_crates",
    cargo_lockfile = "//packages/dashql-compute:Cargo.lock",
    manifests = ["//packages/dashql-compute:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
        "wasm32-unknown-unknown",
    ],
)
compute_crate.annotation_select(
    crate = "getrandom",
    crate_features = ["wasm_js"],
    triples = ["wasm32-unknown-unknown"],
    version = "0.4.1",
    deps = ["@compute_crates//:wasm-bindgen"],
)
use_repo(compute_crate, "compute_crates")

# Native crate universe (dashql-native, dashql-pack -- no WASM).
# Root workspace at Cargo.toml with members pointing downward into packages/.
# Run CARGO_BAZEL_REPIN=1 bazel build @crates//:all after changing root Cargo.toml or Cargo.lock.
# Native crate universe: aarch64 + x86_64 macOS (for universal binary) + Linux.
# After changing triples, repin: CARGO_BAZEL_REPIN=1 bazel build @crates//:all
native_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate", isolate = True)
native_crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
)

# Suppress macOS ranlib "has no symbols" warnings from aws-lc-sys.
# The crate compiles platform-specific C sources for all targets; files meant for
# Windows/Linux produce empty objects on macOS, triggering harmless ranlib warnings.
# The cmake Rust crate forwards RANLIB as -DCMAKE_RANLIB to cmake.
native_crate.annotation_select(
    build_script_env = {
        "RANLIB": "/usr/bin/ranlib -no_warning_for_no_symbols",
    },
    crate = "aws-lc-sys",
    triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
use_repo(native_crate, "crates")

# WASM build: use wasm32 platform so the WASI SDK toolchain is selected.
register_toolchains("@wasi_sdk//:wasi_cc_toolchain")

# Neutral exec platform for wasm-opt / wasm-strip actions (see bazel/platforms/BUILD.bazel).
register_execution_platforms("//bazel/platforms:wasm_tool_exec")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
