# Package for Bzlmod external_projects extension and build_file fragments.
exports_files([
    "external_projects.bzl",

    "external_ankerl.BUILD",
    "external_benchmark.BUILD",
    "external_bison.bzl",
    "external_c4core.BUILD",
    "external_duckdb.BUILD",
    "external_flatbuffers.BUILD",
    "external_flex.bzl",
    "external_m4.bzl",
    "external_rapidjson.BUILD",
    "external_rapidyaml.BUILD",
])
