# Package for Bzlmod external_projects extension and build_file fragments.
exports_files([
    "external_projects.bzl",

    "external_ankerl.BUILD",
    "external_arrow.BUILD",
    "external_benchmark.BUILD",
    "external_bison.bzl",
    "external_c4core.BUILD",
    "external_duckdb.BUILD",
    "external_duckdb_prebuilt.BUILD",
    "external_flatbuffers.BUILD",
    "external_flex.bzl",
    "external_m4.bzl",
    "external_rapidjson.BUILD",
    "external_rapidyaml.BUILD",
    "external_wasm_bindgen.bzl",
    "macos_packaging.bzl",
    "rust_wasm.bzl",
])

alias(
    name = "duckdb",
    actual = select({
        "@platforms//os:macos": "@duckdb_prebuilt_osx//:duckdb",
        "@platforms//os:linux": "@duckdb_prebuilt_linux_amd64//:duckdb",
    }),
    visibility = ["//visibility:public"],
)
