[package]
name = "dashql"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "dump"
path = "src/dump.rs"

[[bin]]
name = "dvms"
path = "src/dvms.rs"

[dependencies]
dashql_proto = { path = "../packages/proto" }
flatbuffers = "2.1.1"
libc = "0.2.121"
serde = { version = "1.0.136", features = ['derive'] }
quick-xml = { version = "0.22.0", features = ['serialize'] }
clap = "2.33.3"
log = "0.4.0"
env_logger = "0.8.3"
pretty_assertions = "1.2.1"

[build-dependencies]
cmake = "0.1.48"
