[package]
name = "dashql"
version = "0.1.0"
edition = "2018"

[lib]
name = "dashql"
path = "src/lib.rs"
crate-type = ["lib"]
test = true
doctest = false

[[bin]]
name = "dump"
path = "src/bin/dump.rs"
test = false
doctest = false

[[bin]]
name = "dvms"
path = "src/bin/dvms.rs"
test = false
doctest = false

[dependencies]
dashql_proto = { path = "../packages/proto" }
dashql_parser = { path = "../parser-sys" }
bumpalo = "3.9.1"
flatbuffers = "2.1.1"
libc = "0.2.121"
serde = { version = "1.0.136", features = ['derive'] }
quick-xml = { version = "0.22.0", features = ['serialize'] }
clap = "2.33.3"
log = "0.4.0"
env_logger = "0.8.3"
pretty_assertions = "1.2.1"
